Fix remaining issues (and wrong unit tests... wow) #88